erDiagram
    DIM_PLAYERS {
        int player_key
        int player_id
        string full_name
        date dob
        string position
        string foot
        int height_in_cm
    }

    DIM_CLUBS {
        int club_key
        int club_id
        string club_name
        string stadium_name
        int stadium_seats
    }

    DIM_COMPETITIONS {
        int competition_key
        string competition_id
        string competition_name
        string competition_type
        boolean is_top_5_league
    }

    DIM_GAMES {
        int game_key
        int game_id
        date game_date
        string season
        string round
        string referee
    }

    FACT_PLAYER_STATS {
        int appearance_id
        int player_key
        int game_key
        int club_key
        int goals
        int assists
        int minutes_played
        boolean is_starter
    }

    FACT_TEAM_RESULTS {
        int result_id
        int game_key
        int club_key
        int opponent_club_key
        int goals_for
        int goals_against
        int points_earned
    }

    FACT_PLAYER_VALUATIONS {
        int valuation_id
        int player_key
        int date_key
        numeric market_value_eur
    }

    FACT_TRANSFERS {
        int transfer_id
        int player_key
        int from_club_key
        int to_club_key
        int game_key
        numeric transfer_fee
        numeric market_value_at_transfer
    }

    DIM_PLAYERS ||--o{ FACT_PLAYER_STATS : "plays"
    DIM_PLAYERS ||--o{ FACT_PLAYER_VALUATIONS : "valued"
    DIM_PLAYERS ||--o{ FACT_TRANSFERS : "transferred"

    DIM_CLUBS ||--o{ FACT_PLAYER_STATS : "belongs"
    DIM_CLUBS ||--o{ FACT_TEAM_RESULTS : "competes"
    DIM_CLUBS ||--o{ FACT_TRANSFERS : "trades"

    DIM_GAMES ||--o{ FACT_PLAYER_STATS : "occurs"
    DIM_GAMES ||--o{ FACT_TEAM_RESULTS : "occurs"

    DIM_COMPETITIONS ||--o{ FACT_TEAM_RESULTS : "organized_in"
    DIM_COMPETITIONS ||--o{ FACT_PLAYER_STATS : "recorded_in"
